used fit-content property and aligned getStarted div to flex-start to fix sizing issue

--- a/src/containers/home/indexHome.css
+++ b/src/containers/home/indexHome.css
@@ -92,16 +92,17 @@
 }
 
 #homeBodyGetStarted {
-    padding: 2% 0% 0%;
+    /* padding: 2% 0% 0%; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     height: 60%;
     width: 95%;
 }
 
 #homeBodyGetStartedTagline {
-    height: 35%;
+    min-height: fit-content(35%);
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -114,13 +115,15 @@
 
 #homeBodyGetStartedWaysText {
     font-size: 2em;
+    padding: 1% 0%;
 }
 
 #homeBodyGetStartedOptions {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    height: 65%;
+    height: fit-content(60%);
+    /* overflow: hidden; */
 }
 
 #homeBodyGetStartedOptionsLearn {
@@ -248,27 +251,30 @@
     }
     #homeBodyGetStartedWaysText {
         font-size: 1.5em;
+        padding: 1% 0%;
     }
     #homeBodyGetStarted {
         padding: 2% 0% 0%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         height: 80%;
         width: 100%;
     }
     #homeBodyGetStartedTagline {
-        height: 45%;
+        min-height: fit-content(35%);
+        /* overflow: hidden; */
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: center;
     }
     #homeBodyGetStartedOptions {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         /* align-content: space-around; */
-        height: 55%;
+        height: fit-content(60%);
+        /* overflow: hidden; */
     }
     #homeBodyGetStartedOptionsLearn {
         background-color: #DB5461;
